--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==3.0.0
-flask_cors==4.0.0
+Flask_Cors==4.0.0
 geopy==2.4.1
-numpy==1.26.2
+numpy==1.26.3
 python_tsp==0.4.0
 Requests==2.31.0
 scikit_learn==1.3.2
