--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 apscheduler==3.10.4
 Flask==3.0.0
+flask_bcrypt==1.0.1
 Flask_Cors==4.0.0
 geopy==2.4.1
 numpy==1.26.3
+psycopg2==2.9.9
 python_tsp==0.4.0
 Requests==2.31.0
 scikit_learn==1.3.2
